apps/talos-home/ntfy/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ntfy
  namespace: ntfy
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ntfy.lan`)
      kind: Rule
      services:
        - name: ntfy
          port: 80
  tls:
    secretName: ntfy-tls
